fixed profile page stretch on safari

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -161,6 +161,7 @@ li a:hover {
   float: left;
   padding:10px;
   width: 250px;
+  max-height: 250px;
   margin-right: 40px;
   border-radius: 50%;
   -webkit-transition: -webkit-transform .7s ease-in-out;
@@ -191,6 +192,7 @@ li a:hover {
       -ms-flex-pack: center;
           justify-content: center;
   max-width: 80%;
+  max-height:35%;
   margin: 0 auto;
   border-radius: 8px;
   text-align: center;
@@ -510,14 +512,14 @@ input[type=tel] {
   opacity: .85
 }
 
-.ufo-svg__img  {
+ .ufo-svg__img  {
     width: 100%;
     height:100%;
     margin: -28px 0 0 -167px;
     position: relative;
 }
 
-#svg238 {
+ #svg238 {
   display:inline-block;
   width: 331px;
   height: 100px;
@@ -533,7 +535,7 @@ input[type=tel] {
             animation: floatAnim 3s ease-in-out infinite;
   }
 
-.ufo_svg {
+ .ufo_svg {
   width:100%;
   height:75px;
 }
