--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,7 @@ li a:hover {
   float: left;
   padding:10px;
   width: 250px;
+  max-height: 250px;
   margin-right: 40px;
   border-radius: 50%;
   transition: transform .7s ease-in-out;
@@ -165,6 +166,7 @@ li a:hover {
   display: flex;
   justify-content: center;
   max-width: 80%;
+  max-height:35%;
   margin: 0 auto;
   border-radius: 8px;
   text-align: center;
